Updates for ArchLinux

--- a/ralab/custom.ipxe.j2
+++ b/ralab/custom.ipxe.j2
@@ -36,7 +36,7 @@
 :custom
 clear custom_choice
 menu RHEL Options:
-item --gap This is the first sub menu
+item --gap RA Lab iPXE Boot options
 item --key 1 acronis ${space} 1) Acronis
 item --key 2 rhel84_autodisk ${space} 2) RHEL 8.4 via AutoDisk Select
 item --key 3 rhel83_autodisk ${space} 3) RHEL 8.3 via AutoDisk Select
