Add back in RHEL 7 support

--- a/ralab/custom.ipxe.j2
+++ b/ralab/custom.ipxe.j2
@@ -3,36 +3,6 @@
 ### boot.lyve.colo.seagate.com custom menu example
 ###
 #
-# Check the links:
-# for X in $(cat ralab/custom.ipxe.j2 | sed 's/ /\n/g' | grep 'http://'  | grep -v inst.dd | grep rhel | sed 's/repo=//g' | sed 's/ks=//g') ; do curl ${X} >/dev/null; done
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-3w-9xxx-2.26.02.014-5.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-3w-sas-3.26.02.000-5.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-3w-xxxx-2.26.02.003-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-aacraid-1.2.1-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-arcmsr-1.40.00.05-20180309.4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-hpsa-3.4.20-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-isci-1.2.0-6.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-megaraid_mbox-2.20.5.1-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-megaraid_sas-07.714.04.00-1.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mlx4-4.0-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mpt3sas-34.100.00.00-1.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mptfc-3.04.20-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mptsas-3.04.20-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mptspi-3.04.20-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mvsas-0.8.16-3.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-pata_amd-0.4.1-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-pata_atiixp-0.4.6-1.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-pata_jmicron-0.1.5-1.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-pata_sis-0.5.2-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-pata_via-0.3.4-2.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_nv-3.5-3.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_sil-2.4-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_sil24-1.1-2.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_sis-1.0-4.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_uli-1.3-3.el8_3.elrepo.iso
-#inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-sata_via-2.6-2.el8_3.elrepo.iso
-#
-
 :custom
 clear custom_choice
 menu RHEL Options:
@@ -41,11 +11,12 @@ item --key 1 acronis ${space} 1) Acronis
 item --key 2 rhel84_autodisk ${space} 2) RHEL 8.4 via AutoDisk Select
 item --key 3 rhel83_autodisk ${space} 3) RHEL 8.3 via AutoDisk Select
 item --key 4 rhel83_driver_disk ${space} 4) RHEL 8.3 via AutoDisk & Driver Disks
+item --key 5 rhel7_autodisk ${space} 5) RHEL 7 via AutoDisk
 item --gap Other Options:
 item option_two ${space} Loading an ISO
-item --key 5 ra_ubuntu ${space} 5) Upstream ubuntu releases.
-item --key 6 suse_15sp2 ${space} 6) SuSE SLES 15 SP2
-item --key 7 ra_archlinux ${space} 7) Install Arch Linux
+item --key 6 ra_ubuntu ${space} 6) Upstream ubuntu releases.
+item --key 8 suse_15sp2 ${space} 7) SuSE SLES 15 SP2
+item --key 9 ra_archlinux ${space} 8) Install Arch Linux
 item option_four ${space} This is option four
 choose custom_choice || goto custom_exit
 echo ${cls}
@@ -83,6 +54,14 @@ imgstat
 imgfree
 kernel http://repo.lyve.colo.seagate.com/rhel/pkg/8.3/rhel-8.3-x86_64-dvd/images/pxeboot/vmlinuz initrd=initrd.img repo=http://repo.lyve.colo.seagate.com/rhel/pkg/8.3/rhel-8.3-x86_64-dvd/ ksdevice=link devfs=nomount ip=dhcp inst.text inst.sshd console=ttyS0,115200n8 ks=http://repo.lyve.colo.seagate.com/rhel8-ks-autodisk.cfg inst.dd=http://repo.lyve.colo.seagate.com/rhel/iso/8.3/dd-mpt3sas-34.100.00.00-1.el8_3.elrepo.iso inst.dd=http://repo.lyve.colo.seagate.com/iso/8.3/dd-mptsas-3.04.20-4.el8_3.elrepo.iso
 initrd http://repo/rhel/pkg/8.3/rhel-8.3-x86_64-dvd/images/pxeboot/initrd.img
+boot || goto custom_exit
+
+:rhel7_autodisk
+echo "Bootstrapping RHEL 7 AutoDiskSelect"
+imgstat
+imgfree
+kernel http://mgmt.lyve.colo.seagate.com/repo/centos/7/os/x86_64/images/pxeboot/vmlinuz initrd=initrd.img repo=http://mgmt.lyve.colo.seagate.com/repo/centos/7/os/x86_64/ ksdevice=link devfs=nomount ip=dhcp inst.text inst.sshd console=ttyS0,115200n8 
+initrd http://mgmt.lyve.colo.seagate.com/repo/centos/7/os/x86_64/images/pxeboot/initrd.img
 boot || goto custom_exit
 
 :suse_15sp2
