--- a/ralab/ra_ubuntu.ipxe.j2
+++ b/ralab/ra_ubuntu.ipxe.j2
@@ -6,7 +6,6 @@
 goto ${menu}
 
 :ubuntu
-set cmdline console=tty0 console=ttyS0,115200n8 text
 set os Ubuntu
 set os_arch ${arch}
 iseq ${os_arch} x86_64 && set os_arch amd64 ||
@@ -19,12 +18,9 @@ set install_type deb
 set install_priority critical
 menu ${os} - ${os_arch}
 item --gap Latest Releases
-item jammy ${space} ${os} 22.04 LTS Jammy Jellyfish
-item impish ${space} ${os} 21.10 Impish Indri
-item focal ${space} ${os} 20.04 LTS Focal Fossa (Subiquity)
-item focal-legacy ${space} ${os} 20.04 LTS Focal Fossa (Legacy)
-item bionic ${space} ${os} 18.04 LTS Bionic Beaver
-item xenial ${space} ${os} 16.04 LTS Xenial Xerus
+{% for item in releases.ubuntu.versions %}
+item {{ item.code_name }} ${space} ${os} {{ item.name }}
+{% endfor %}
 item --gap Older Releases
 item older_release ${space} Set release codename...
 choose ubuntu_version || goto ubuntu_exit
@@ -39,7 +35,7 @@ goto mirrorcfg
 
 :older_release
 set older_release true
-set ubuntu_mirror http://old-releases.ubuntu.com
+set ubuntu_mirror {{ releases.ubuntu.archive_mirror }}
 echo Setting mirror to ${ubuntu_mirror}
 clear ubuntu_version
 echo -n Please set enter code name of release: ${} && read ubuntu_version
@@ -88,53 +84,27 @@ iseq ${install_type} sub && goto ${ubuntu_version}_${os_arch} ||
 echo Loading Ubuntu PXE netboot installer
 set dir ${dir}ubuntu-installer/${os_arch}
 imgfree
-kernel ${ubuntu_mirror}/${dir}/linux ${install_params} ${mirrorcfg} initrd=initrd.magic ${cmdline}
+kernel ${ubuntu_mirror}/${dir}/linux ${install_params} ${mirrorcfg} {{ kernel_params }}
 initrd ${ubuntu_mirror}/${dir}/initrd.gz
 echo
 echo MD5sums:
 md5sum linux initrd.gz
 boot
 
-:focal_amd64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/20.04.4-873839e4/
-set codename focal
-set version_number 20.04.4
+{% for key, value in endpoints.items() | sort %}
+{% if value.os == "ubuntu" and 'netboot' in key %}
+{% set kernel_name = value.kernel %}
+:{{ value.codename }}_{{ value.arch }}
+{% for key, value in endpoints.items() | sort %}
+{% if key == kernel_name %}
+set kernel_url ${live_endpoint}{{ value.path }}
+set codename {{ value.codename }}
+set version_number {{ value.version }}
+{% endif %}
+{% endfor %}
 goto sub_boot
-:focal_arm64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/20.04.4-2c21f29a/
-set codename focal
-set version_number 20.04.4
-goto sub_boot
-:hirsute_amd64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/21.04-bc3638f3/
-set codename hirsute
-set version_number 21.04
-goto sub_boot
-:hirsute_arm64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/21.04-15aa2439/
-set codename hirsute
-set version_number 21.04
-goto sub_boot
-:impish_amd64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/21.10-8741eec2/
-set codename impish
-set version_number 21.10
-goto sub_boot
-:impish_arm64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/21.10-c6332e3c/
-set codename impish
-set version_number 21.10
-goto sub_boot
-:jammy_amd64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/22.04-73e57464/
-set codename jammy
-set version_number 22.04
-goto sub_boot
-:jammy_arm64
-set kernel_url ${live_endpoint}/ubuntu-squash/releases/download/22.04-327c1eca/
-set codename jammy
-set version_number 22.04
-goto sub_boot
+{% endif %}
+{% endfor %}
 
 :sub_boot
 imgfree
@@ -142,7 +112,7 @@ iseq ${os_arch} amd64 && set ubuntu_iso_url http://releases.ubuntu.com/${codenam
 iseq ${os_arch} arm64 && set ubuntu_iso_url http://cdimage.ubuntu.com/releases/${version_number}/release/ubuntu-${version_number}-live-server-${os_arch}.iso ||
 isset ${dhcp-server} && set netboot_params ip=dhcp url=${ubuntu_iso_url} || set netboot_params
 echo Loading Ubuntu Subiquity Network Installer...
-kernel ${kernel_url}vmlinuz root=/dev/ram0 ramdisk_size=1500000 ${netboot_params} ${install_params} initrd=initrd.magic ${cmdline}
+kernel ${kernel_url}vmlinuz root=/dev/ram0 ramdisk_size=1500000 ${netboot_params} ${install_params} {{ kernel_params }}
 initrd ${kernel_url}initrd
 echo
 echo MD5sums:
